--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hogwarts sorting hat</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
        crossorigin="anonymous">
 </head>
@@ -16,8 +16,9 @@
         <p class="lead">
           <button id="revele" class="btn btn-primary btn-lg" href="#" role="button">Sorting Form</button>
         </p>
-      </div> 
+    </div> 
       <div id="form"></div>
+      <div id="card"></div>
       <script src="main.js"></script>
 </body>
 </html>
