--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hogwarts sorting hat</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
        crossorigin="anonymous">
+       <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="jumbotron">
@@ -18,7 +19,8 @@
         </p>
     </div> 
       <div id="form"></div>
-      <div id="card"></div>
+      <div id="empty_input" class="empty_class"></div>
+      <div id="card" class="d-flex flex-wrap"></div>
       <script src="main.js"></script>
 </body>
 </html>
