--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4">Sorting Hat</h1>
+        <p class="lead">This is a page where you insert your name and you will be randomly assigned to a Harry Potter school.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>Hit the Sorting Form button and type your name in the form that appears. </p>
         <p class="lead">
           <button id="reveal" class="btn btn-primary btn-lg" href="#" role="button">Sorting Form</button>
         </p>
